# qml_osgearth

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindOsgEarth.cmake  Unset3dCacheVariables.cmake
data_osg/: data.earth
include/: loader.h  osg_quick_item.h  scene.h
qml/: Main.qml
scripts/: copy_3d3rdparty_debug_2021_06.bat  copy_3d3rdparty_release_2021_06.bat
src/: loader.cpp  main.cpp  osg_quick_item.cpp  scene.cpp
